--- a/Home/연습.html
+++ b/Home/연습.html
@@ -5,45 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <title>sementic 마크업</title> 
+    <title>연습하기</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="main.css">
-    
+    <link rel="stylesheet" href="연습.css">
 </head>
 <body>
-  <div id="app">
-   <header>
-        <h1>ICIA</h1>
-        <div id="search">
-            <input>
-            <i class="fa-solid fa-magnifying-glass"></i>
-        </div>
-      </header>
-      <nav>
+   <div id="aa">
+    <header>
+      <h1>ICIA</h1>
+      <div id="bb">
+        <input placeholder="검색하세요">
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </div>
+    </header>
+     <nav>
         <i class="fa-solid fa-house"></i>
         <ul>
-            <li><a href="#">HOME</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#">로그인</a></li>
             <li><a href="#">가입</a></li>
             <li><a href="#">찾기</a></li>
         </ul>
-       </nav>
-      <main>
+     </nav>
+     <main>
         <aside>
-
         </aside>
         <section>
-          
+
         </section>
         <aside>
-
         </aside>
-      </main>
-      <footer>
-        꼬리말영역
-      </footer>
-    </div>
-
-  
+     </main>
+     <footer>꼬리말영역</footer>
+   </div>  
 </body>
 </html>
